fix border overflow issue

--- a/frontend/src/components/Overview/_index.scss
+++ b/frontend/src/components/Overview/_index.scss
@@ -1,5 +1,6 @@
 .sm-Overview {
     margin-top: 0;
+    width: min-content;
     position: relative;
     border: 1px dashed #dedede;
     padding: 8px;
